--- a/yamls/wordpress.yaml
+++ b/yamls/wordpress.yaml
@@ -98,10 +98,11 @@
 # CVE-2012-3383 3.4.1   http://codex.wordpress.org/Version_3.4.1
 # CVE-2012-3384 3.4.1   http://codex.wordpress.org/Version_3.4.1
 # CVE-2012-3385 3.4.1   http://codex.wordpress.org/Version_3.4.1
+# CVE-2012-4421 3.4.2   http://codex.wordpress.org/Version_3.4.2
 WordPress:
   1:
     location: ['/wp-includes/version.php']
-    secure_version: 3.4.1
+    secure_version: 3.4.2
     regexp: ['\$wp_version.*?(?P<version>[0-9.]+)']
-    cve: http://codex.wordpress.org/Version_3.4.1 CVE-2012-3383, CVE-2012-3384, CVE-2012-3385
+    cve: http://codex.wordpress.org/Version_3.4.2 CVE-2012-4421
     fingerprint: detect_general
