--- a/yamls/wordpress.yaml
+++ b/yamls/wordpress.yaml
@@ -4,8 +4,6 @@
 # http://secunia.com/advisories/24951/
 # http://secunia.com/advisories/28130/
 # http://osvdb.org/show/osvdb/73721
-# Not valid:
-# N/A                   OSVDB:72173
 # N/A           0.71    SA8954
 # Open installation:
 # CVE-2012-0937         OSVDB:78710
@@ -100,6 +98,8 @@
 # CVE-2012-3385 3.4.1   http://codex.wordpress.org/Version_3.4.1
 # CVE-2012-4421 3.4.2   http://codex.wordpress.org/Version_3.4.2
 # CVE-2012-4448 N/A     OSVDB:85731 SA50715 http://packetstormsecurity.org/files/116785/WordPress-3.4.2-Cross-Site-Request-Forgery.html
+#   - Requested more details from security@wordpress.org 2012-10-08
+#   - Asked status of Debian package's fix 2012-10-08
 WordPress:
   1:
     location: ['/wp-includes/version.php']
