--- a/yamls/tikiwiki.yaml
+++ b/yamls/tikiwiki.yaml
@@ -9,6 +9,8 @@
 # N/A           8.2/6.5     OSVDB:77965 SA47278 # TODO: Missing CVE-identifier
 # CVE-2011-4551 8.2/6.5     OSVDB:77966 SA47278 http://info.tiki.org/article183-Tiki-Wiki-CMS-Groupware-8-2-and-6-5LTS-Security-Patches-Available 
 # CVE-2011-4558 8.3/6.6     OSVDB:78013 SA47320 http://dev.tiki.org/item4059 http://info.tiki.org/article185-Tiki-Security-Patches-Available-for-8-3-and-6-6-LTS
+# CVE-2012-3996 8.4         OSVDB:83533
+# CVE-2012-0911 8.4         OSVDB:83534
 TikiWiki:
   1:
     location: ['/lib/setup/twversion.class.php']
