--- a/yamls/moinmoin.yaml
+++ b/yamls/moinmoin.yaml
@@ -28,11 +28,15 @@
 # CVE-2010-2969 1.9.3 SA40043
 # CVE-2010-2970 1.9.3 SA40043
 # CVE-2011-1058 1.9.4 OSVDB:71025 SA43413
+# CVE-2012-4404         TODO need more information
+# CVE-2012-6080 N/A     http://hg.moinmo.in/moin/1.9/rev/3c27131a3c52
+# CVE-2012-6081 N/A     http://hg.moinmo.in/moin/1.9/rev/7e7e1cbb9d3f
+# CVE-2012-6082 N/A     http://hg.moinmo.in/moin/1.9/rev/c98ec456e493
 # TODO: fingerprint list is not full. Check OSVDB.
 MoinMoin:
   1:
     location: ['/MoinMoin/version.py']
-    secure_version: '1.9.4'
+    secure_version: '1.9.6'
     regexp: ['.*?release.*?(?P<version>[0-9.]{1,})']
-    cve: CVE-2011-1058 OSVDB:71025 SA43413
+    cve: CVE-2012-6080, CVE-2012-6081, CVE-2012-6082 http://moinmo.in/SecurityFixes
     fingerprint: detect_general
