--- a/yamls/wordpress.yaml
+++ b/yamls/wordpress.yaml
@@ -98,6 +98,9 @@
 # CVE-2012-4448 N/A     OSVDB:85731 SA50715 http://packetstormsecurity.org/files/116785/WordPress-3.4.2-Cross-Site-Request-Forgery.html
 #   - Requested more details from security@wordpress.org 2012-10-08
 #   - Asked status of Debian package's fix 2012-10-08
+# CVE-2012-5868 N/A     OSVDB:88744
+#   - Requested more details from security@wordpress.org 2012-12-29
+#   - No fixed version available 2013-01-17
 WordPress:
   1:
     location: ['/wp-includes/version.php']
