--- a/yamls/wordpress.yaml
+++ b/yamls/wordpress.yaml
@@ -95,9 +95,7 @@
 # CVE-2012-3384 3.4.1   http://codex.wordpress.org/Version_3.4.1
 # CVE-2012-3385 3.4.1   http://codex.wordpress.org/Version_3.4.1
 # CVE-2012-4421 3.4.2   http://codex.wordpress.org/Version_3.4.2
-# CVE-2012-4448 N/A     OSVDB:85731 SA50715 http://packetstormsecurity.org/files/116785/WordPress-3.4.2-Cross-Site-Request-Forgery.html
-#   - Requested more details from security@wordpress.org 2012-10-08
-#   - Asked status of Debian package's fix 2012-10-08
+# CVE-2012-4448 3.5     OSVDB:85731 SA50715 http://packetstormsecurity.org/files/116785/WordPress-3.4.2-Cross-Site-Request-Forgery.html
 # CVE-2012-5868 N/A     OSVDB:88744
 #   - Requested more details from security@wordpress.org 2012-12-29
 #   - No fixed version available 2013-01-17
