SMF: CVE-2009-5068 OSVDB:86444

--- a/yamls/smf.yaml
+++ b/yamls/smf.yaml
@@ -29,6 +29,7 @@
 # N/A           1.1.9 OSVDB:51646 SA33670
 # N/A           1.1.11 SA37557
 # N/A           1.1.19 OSVDB:54773 SA35267
+# CVE-2009-5068 1.1.11 OSVDB:86444
 # CVE-2011-1127 1.1.13 OSVDB:71009 SA43436
 # CVE-2011-1128 1.1.13 OSVDB:75235
 # CVE-2011-1129 1.1.13 OSVDB:74321
