--- a/yamls/wordpress.yml
+++ b/yamls/wordpress.yml
@@ -100,11 +100,18 @@
 # CVE-2013-0235 3.5.1   http://osvdb.org/89138 http://wordpress.org/news/2013/01/wordpress-3-5-1/ Debian:698916
 # CVE-2013-0236 3.5.1   http://osvdb.org/89576 http://wordpress.org/news/2013/01/wordpress-3-5-1/ Debian:698927
 # CVE-2013-0237 3.5.1   http://osvdb.org/89577 http://wordpress.org/news/2013/01/wordpress-3-5-1/ Debian:698929
+# CVE-2013-2199 3.5.2   http://wordpress.org/news/2013/06/wordpress-3-5-2/ http://bugs.debian.org/713947 http://codex.wordpress.org/Version_3.5.2
+# CVE-2013-2200 3.5.2   http://wordpress.org/news/2013/06/wordpress-3-5-2/ http://bugs.debian.org/713947 http://codex.wordpress.org/Version_3.5.2
+# CVE-2013-2201 3.5.2   http://wordpress.org/news/2013/06/wordpress-3-5-2/ http://bugs.debian.org/713947 http://codex.wordpress.org/Version_3.5.2
+# CVE-2013-2202 3.5.2   http://wordpress.org/news/2013/06/wordpress-3-5-2/ http://bugs.debian.org/713947 http://codex.wordpress.org/Version_3.5.2
+# CVE-2013-2203 3.5.2   http://wordpress.org/news/2013/06/wordpress-3-5-2/ http://bugs.debian.org/713947 http://codex.wordpress.org/Version_3.5.2
+# CVE-2013-2204 3.5.2   http://wordpress.org/news/2013/06/wordpress-3-5-2/ http://bugs.debian.org/713947 http://codex.wordpress.org/Version_3.5.2
+# CVE-2013-2205 3.5.2   http://wordpress.org/news/2013/06/wordpress-3-5-2/ http://bugs.debian.org/713947 http://codex.wordpress.org/Version_3.5.2
 WordPress:
   1:
     location: ['/wp-includes/version.php']
-    secure_version: '3.5.1'
+    secure_version: '3.5.2'
     regexp: ['\$wp_version.*?(?P<version>[0-9.]+)']
-    cve: http://wordpress.org/news/2013/01/wordpress-3-5-1/ CVE-2013-0235, CVE-2013-0236, CVE-2013-0237
+    cve: 'CVE-2013-2199, CVE-2013-2200, CVE-2013-2201, CVE-2013-2202, CVE-2013-2203, CVE-2013-2204, CVE-2013-2205, http://wordpress.org/news/2013/06/wordpress-3-5-2/ http://codex.wordpress.org/Version_3.5.2'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
