--- a/yamls/gallery.yml
+++ b/yamls/gallery.yml
@@ -10,28 +10,30 @@
 # CVE-2013-XXXX 3.0.5 http://osvdb.org/90599 http://osvdb.org/91412 http://osvdb.org/90590 http://osvdb.org/90599 http://osvdb.org/90600 http://osvdb.org/90601 http://osvdb.org/91410 http://osvdb.org/91411
 # CVE-2013-2087 3.0.7 http://osvdb.org/92691
 # CVE-2013-2087 3.0.7 http://osvdb.org/92740
-# CVE-2013-2138 3.0.8   http://galleryproject.org/gallery_3_0_8
+# CVE-2013-2138 3.0.8 http://galleryproject.org/gallery_3_0_8
+# CVE-2013-2240 3.0.9 http://osvdb.org/94663 SA53964 http://galleryproject.org/gallery_3_0_9
+# CVE-2013-2241 3.0.9 http://osvdb.org/94664 http://galleryproject.org/gallery_3_0_9
 Gallery 3:
   1:
     location: ['/modules/gallery/helpers/gallery.php']
-    secure_version: '3.0.8'
+    secure_version: '3.0.9'
     regexp: ['.*?const.*?VERSION.*?(?P<version>[0-9.]{1,})']
-    cve: 'http://galleryproject.org/gallery_3_0_8'
+    cve: 'CVE-2013-2240 http://osvdb.org/94663 CVE-2013-2241 http://osvdb.org/94664 http://galleryproject.org/gallery_3_0_9'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Gallery 2:
   1:
     location: ['/modules/core/module.inc']
-    secure_version: '3.0.8'
+    secure_version: '3.0.9'
     regexp: ['.*?setGalleryVersion.*?(?P<version>[0-9.]{1,})']
-    cve: 'http://galleryproject.org/gallery_3_0_8'
+    cve: 'CVE-2013-2240 http://osvdb.org/94663 CVE-2013-2241 http://osvdb.org/94664 http://galleryproject.org/gallery_3_0_9'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Gallery 1:
   1:
     location: ['/Version.php']
-    secure_version: '3.0.8'
+    secure_version: '3.0.9'
     regexp: ['\$gallery->version.*?(?P<version>[0-9.]{1,})']
-    cve: 'http://galleryproject.org/gallery_3_0_8'
+    cve: 'CVE-2013-2240 http://osvdb.org/94663 CVE-2013-2241 http://osvdb.org/94664 http://galleryproject.org/gallery_3_0_9'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
