--- a/yamls/serendipity.yml
+++ b/yamls/serendipity.yml
@@ -9,13 +9,14 @@
 # CVE-2012-2331         http://osvdb.org/81713
 # CVE-2012-2332 1.6.1   http://osvdb.org/81773
 # CVE-2012-2762 1.6.2   http://osvdb.org/82036
-# CVE-XXXX-XXXX         http://osvdb.org/87395
+# CVE-2013-5314 1.6.2   http://osvdb.org/95176 https://www.mavitunasecurity.com/xss-vulnerabilities-in-serendipity/ NS-13-003
 # CVE-2013-XXXX 1.7     http://blog.s9y.org/archives/247-Serendipity-1.7-released.html https://www.mavitunasecurity.com/xss-vulnerabilities-in-serendipity/ NS-13-003
+# CVE-2013-5670 1.7.3   http://osvdb.org/87395 http://blog.s9y.org/archives/250-Serendipity-1.7.3-released.html http://www.opensyscom.fr/Actualites/serendipity-xss-vulnerability.html
 Serendipity:
   1:
     location: ['/serendipity_config.inc.php']
-    secure_version: '1.7'
+    secure_version: '1.7.3'
     regexp: ['\$serendipity.*?version.*?(?P<version>[0-9.]+)']
-    cve: 'http://blog.s9y.org/archives/247-Serendipity-1.7-released.html https://www.mavitunasecurity.com/xss-vulnerabilities-in-serendipity/'
+    cve: 'CVE-2013-5670 http://osvdb.org/87395 http://blog.s9y.org/archives/250-Serendipity-1.7.3-released.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
