--- a/yamls/smf.yml
+++ b/yamls/smf.yml
@@ -38,7 +38,8 @@
 # N/A           1.1.15          http://osvdb.org/77727 http://www.simplemachines.org/community/index.php?topic=466218.0
 # CVE-2011-3615 2.0.1/1.1.15    http://osvdb.org/76822 SA46386
 # CVE-2011-4173 2.0.1           http://osvdb.org/76317 SA46386
-# N/A           2.0.1/1.1.15    http://osvdb.org/76318 SA46386
+# N/A           2.0.1/1.1.1     http://osvdb.org/76318 SA46386
+# CVE-2013-XXXX 2.0.5   http://osvdb.org/96323 SA54384 http://www.simplemachines.org/community/index.php?topic=509417.0 http://www.openwall.com/lists/oss-security/2013/09/15/2
 # NFU:  http://osvdb.org/32605 too little information
 #       CVE-2007-5943 http://osvdb.org/39961 myth/fake
 #       CVE-2012-5903 http://osvdb.org/80766
@@ -46,9 +47,9 @@
 SMF 2:
   1:
     location: ['/index.php']
-    secure_version: '2.0.1'
+    secure_version: '2.0.5'
     regexp: ['\$forum_version.*?(?P<version>2[0-9.]{1,})']
-    cve: CVE-2011-3615 http://osvdb.org/76822, CVE-2011-4173 OSVB:76317, http://osvdb.org/46386
+    cve: 'http://osvdb.org/96323 http://secunia.com/advisories/54384/ http://www.simplemachines.org/community/index.php?topic=509417.0'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 SMF 1:
@@ -56,6 +57,6 @@ SMF 1:
     location: ['/index.php']
     secure_version: '1.1.15'
     regexp: ['\$forum_version.*?(?P<version>1[0-9.]{1,})']
-    cve: CVE-2011-3615 http://osvdb.org/76822, CVE-2011-4173 OSVB:76317, http://osvdb.org/46386
+    cve: 'CVE-2011-3615 http://osvdb.org/76822, CVE-2011-4173 OSVB:76317, http://osvdb.org/46386'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
