--- a/yamls/wikkawiki.yml
+++ b/yamls/wikkawiki.yml
@@ -22,11 +22,12 @@
 # CVE-2011-4450 1.3.2-p7    http://osvdb.org/77392 http://blog.wikkawiki.org/2011/12/04/security-updates-for-1-3-11-3-2/
 # CVE-2011-4451 1.3.2-p7    http://osvdb.org/77393 http://blog.wikkawiki.org/2011/12/04/security-updates-for-1-3-11-3-2/
 # CVE-2011-4452 1.3.2-p7    http://osvdb.org/77394 http://blog.wikkawiki.org/2011/12/04/security-updates-for-1-3-11-3-2/
+# CVE-2013-5586 1.3.4-p1    http://secunia.com/advisories/54790/
 WikkaWiki:
   1:
     location: ['/version.php']
-    secure_version: '1.3.2-p7'
+    secure_version: '1.3.4-p1'
     regexp: ['\$svn_version.*?(?P<version>[0-9.]{1,})', '.*?WIKKA_PATCH_LEVEL.*?(?P<version>[0-9.]{1,})']
-    cve: CVE-2011-4448/CVE-2011-4449/CVE-2011-4450/CVE-2011-4451/CVE-2011-4452 http://osvdb.org/77390-77394 http://blog.wikkawiki.org/2011/12/04/security-updates-for-1-3-11-3-2/
+    cve: 'CVE-2013-5586 http://secunia.com/advisories/54790/'
     fingerprint: detect_wikkawiki
     post_processing: ['php5.fcgi']
