--- a/yamls/mantisbt.yml
+++ b/yamls/mantisbt.yml
@@ -21,11 +21,12 @@
 # CVE-2013-1931 1.2.15  http://osvdb.org/92025
 # CVE-2013-1932 1.2.14  http://osvdb.org/92023
 # CVE-2013-1934 1.2.14  http://osvdb.org/92023
+# CVE-2013-4460 1.2.16  http://osvdb.org/98823 http://www.mantisbt.org/bugs/view.php?id=16513
 MantisBT:
   1:
     location: ['/core/constant_inc.php']
-    secure_version: '1.2.15'
+    secure_version: '1.2.16'
     regexp: ['define.*?MANTIS_VERSION.*?(?P<version>[0-9.]+)']
-    cve: CVE-2013-1883 http://osvdb.org/91618, CVE-2013-1930 http://osvdb.org/92024, CVE-2013-1931 http://osvdb.org/92025
+    cve: 'http://cve.mitre.org/cgi-bin/cvename.cgi?name=2013-4460 http://osvdb.org/98823'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
