--- a/yamls/cmsms.yml
+++ b/yamls/cmsms.yml
@@ -19,12 +19,12 @@
 # CVE-2013-4167 1.11.7
 # CVE-2013-3929 ?   http://osvdb.org/100842 http://secunia.com/advisories/53920 # TODO issue 18
 # CVE-2013-XXXX 1.11.8 http://osvdb.org/98876 http://www.cmsmadesimple.org/announcing-cmsms-1-11-8-fioreana/
-# CVE-2014-XXXX 1.11.10 http://osvdb.org/103854 http://dev.cmsmadesimple.org/project/changelog/4602 http://www.cmsmadesimple.org/2014/02/Announcing-CMSMS-1-11-10-Pinzon/
+# CVE-2014-2245 1.11.10 http://osvdb.org/103854 http://dev.cmsmadesimple.org/project/changelog/4602 http://www.cmsmadesimple.org/2014/02/Announcing-CMSMS-1-11-10-Pinzon/
 CMSMS:
   1:
     location: ['/version.php']
     secure_version: '1.11.10'
     regexp: ['\$CMS_VERSION.*?(?P<version>[.0-9]{2,})']
-    cve: 'http://www.cmsmadesimple.org/2014/02/Announcing-CMSMS-1-11-10-Pinzon/ http://osvdb.org/103854'
+    cve: 'CVE-2014-2245 http://www.cmsmadesimple.org/2014/02/Announcing-CMSMS-1-11-10-Pinzon/ http://osvdb.org/103854'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
