--- a/yamls/mediawiki.yml
+++ b/yamls/mediawiki.yml
@@ -48,46 +48,47 @@
 # CVE-2013-6454 1.22.1/1.21.4/1.19.10
 # CVE-2013-6455 1.22.1/1.21.4/1.19.10
 # CVE-2013-6472 1.22.1/1.21.4/1.19.10
-# CVE-2014-1610 1.22.2/1.21.5/1.19.11   http://lists.wikimedia.org/pipermail/mediawiki-announce/2014-January/000140.html
+# CVE-2014-1610 1.22.2/1.21.5/1.19.11 http://lists.wikimedia.org/pipermail/mediawiki-announce/2014-January/000140.html
 # CVE-2014-2242 1.22.3/1.21.6/1.19.12 https://gerrit.wikimedia.org/r/#/q/7d923a6b53f7fbcb0cbc3a19797d741bf6f440eb,n,z
 # CVE-2014-2243 1.22.3/1.21.6/1.19.12 https://gerrit.wikimedia.org/r/#/q/I2a9e89120f7092015495e638c6fa9f67adc9b84f,n,z
 # CVE-2014-2244 1.22.3/1.21.6/1.19.12 https://gerrit.wikimedia.org/r/#/q/Idf985e4e69c2f11778a8a90503914678441cb3fb,n,z
+# CVE-2014-2665 1.22.5/1.21.8/1.19.14 http://lists.wikimedia.org/pipermail/mediawiki-announce/2014-March/000145.html
 MediaWiki 1.22:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.22.3'
+    secure_version: '1.22.5'
     regexp: ['\$wgVersion.*?(?P<version>1\.22\.[0-9.]{1,})']
-    cve: 'CVE-2014-2242, CVE-2014-2243, CVE-2014-2244'
+    cve: 'CVE-2014-2665 http://lists.wikimedia.org/pipermail/mediawiki-announce/2014-March/000145.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.21:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.21.6'
+    secure_version: '1.21.8'
     regexp: ['\$wgVersion.*?(?P<version>1\.21\.[0-9.]{1,})']
-    cve: 'CVE-2014-2242, CVE-2014-2243, CVE-2014-2244'
+    cve: 'CVE-2014-2665 http://lists.wikimedia.org/pipermail/mediawiki-announce/2014-March/000145.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.20:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.20.8'
+    secure_version: '1.22.5'
     regexp: ['\$wgVersion.*?(?P<version>1\.20\.[0-9.]{1,})']
-    cve: 'CVE-2013-4572'
+    cve: 'MediaWiki 1.20.x is end of life.'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.19:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.19.12'
+    secure_version: '1.19.14'
     regexp: ['\$wgVersion.*?(?P<version>1\.19\.[0-9.]{1,})']
-    cve: 'CVE-2014-2242, CVE-2014-2243, CVE-2014-2244'
+    cve: 'CVE-2014-2665 http://lists.wikimedia.org/pipermail/mediawiki-announce/2014-March/000145.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.18:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.22.3'
+    secure_version: '1.22.5'
     regexp: ['\$wgVersion.*?(?P<version>1\.1[0-8]\.[0-9.]{1,})']
     cve: 'MediaWiki 1.18.x is end of life.'
     fingerprint: detect_general
