--- a/yamls/drupal.yml
+++ b/yamls/drupal.yml
@@ -22,7 +22,7 @@ Drupal 7:
     location: ['/includes/bootstrap.inc']
     secure_version: '7.27'
     regexp: ['define.*?VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'https://drupal.org/SA-CORE-2014-002'
+    cve: 'CVE-2014-2983 http://osvdb.org/106004 https://drupal.org/SA-CORE-2014-002'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Drupal 6:
@@ -30,6 +30,6 @@ Drupal 6:
     location: ['/CHANGELOG.txt']
     secure_version: '6.31'
     regexp: ['^Drupal (?P<version>[0-9.]+)']
-    cve: 'https://drupal.org/SA-CORE-2014-002'
+    cve: 'CVE-2014-2983 http://osvdb.org/106004 https://drupal.org/SA-CORE-2014-002'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
