--- a/yamls/piwigo.yml
+++ b/yamls/piwigo.yml
@@ -9,11 +9,12 @@
 # CVE-2013-XXXX ? http://osvdb.org/101408
 # CVE-2013-XXXX ? http://osvdb.org/101409
 # CVE-2014-XXXX 2.6.2 http://osvdb.org/103774 http://piwigo.org/releases/2.6.2
+# CVE-2014-XXXX 2.6.3 http://piwigo.org/releases/2.6.3
 Piwigo:
   1:
     location: ['/include/constants.php']
-    secure_version: '2.6.2'
+    secure_version: '2.6.3'
     regexp: ['define.*?PHPWG_VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'http://osvdb.org/103774 http://piwigo.org/releases/2.6.2'
+    cve: 'http://piwigo.org/releases/2.6.3'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
