--- a/yamls/owncloud.yml
+++ b/yamls/owncloud.yml
@@ -38,6 +38,7 @@
 # oC-SA-2014-014    CVE-2014-3836   6.0.3
 # oC-SA-2014-015    CVE-2014-3837   6.0.3
 # oC-SA-2014-016    CVE-2014-3838   6.0.3/5.0.16
+# oC-SA-2014-017    CVE-2014-3839   6.0.3
 # CVE-2014-2585
 # CVE-2013-7344
 # CVE-2014-2049
@@ -45,14 +46,14 @@
 ownCloud 6:
     1:
       location: ['/version.php']
-      secure_version: '6.0.2'
+      secure_version: '6.0.3'
       regexp: ['\$OC_VersionString.*?(?P<version>[0-9.]+)']
-      cve: 'http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2014-2057 http://owncloud.org/about/security/advisories/oC-SA-2014-006/ http://owncloud.org/about/security/advisories/oC-SA-2014-007/'
+      cve: 'oC-SA-2014-011/CVE-2014-3834, oC-SA-2014-012/CVE-2014-3835, oC-SA-2014-013/CVE-2014-3834, oC-SA-2014-014/CVE-2014-3836, oC-SA-2014-015/CVE-2014-3837, oC-SA-2014-016/CVE-2014-3838, oC-SA-2014-017/CVE-2014-3839'
       fingerprint: detect_general
 ownCloud 5:
     1:
       location: ['/lib/util.php']
-      secure_version: '5.0.15'
+      secure_version: '5.0.16'
       regexp: ['.*?getVersionString.*?return.*?(?P<version>[0-9.]+)']
-      cve: 'http://owncloud.org/about/security/advisories/oC-SA-2014-006/'
+      cve: 'oC-SA-2014-012/CVE-2014-3835, oC-SA-2014-016/CVE-2014-3838'
       fingerprint: detect_owncloud
