--- a/yamls/mediawiki.yml
+++ b/yamls/mediawiki.yml
@@ -62,26 +62,35 @@
 # CVE-2014-2665 1.22.5/1.21.8/1.19.14 http://lists.wikimedia.org/pipermail/mediawiki-announce/2014-March/000145.html
 # CVE-2014-2853 1.22.6/1.21.9 http://lists.wikimedia.org/pipermail/mediawiki-announce/2014-April/000149.html
 # CVE-2014-3966 1.22.7/1.21.10/1.19.16 http://osvdb.org/107528 http://lists.wikimedia.org/pipermail/mediawiki-announce/2014-May/000151.html
+# N/A           1.23.1/1.22.8/1.21.11/1.19.17   http://lists.wikimedia.org/pipermail/mediawiki-announce/2014-June/000154.html
+MediaWiki 1.23:
+  1:
+    location: ['/includes/DefaultSettings.php']
+    secure_version: '1.23.1'
+    regexp: ['\$wgVersion.*?(?P<version>1\.23\.[0-9.]{1,})']
+    cve: 'http://lists.wikimedia.org/pipermail/mediawiki-announce/2014-June/000154.html'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
 MediaWiki 1.22:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.22.7'
+    secure_version: '1.22.8'
     regexp: ['\$wgVersion.*?(?P<version>1\.22\.[0-9.]{1,})']
-    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-3966 http://lists.wikimedia.org/pipermail/mediawiki-announce/2014-May/000151.html http://osvdb.org/107528'
+    cve: 'http://lists.wikimedia.org/pipermail/mediawiki-announce/2014-June/000154.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.21:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.22.7'
+    secure_version: '1.23.1'
     regexp: ['\$wgVersion.*?(?P<version>1\.21\.[0-9.]{1,})']
-    cve: 'MediaWiki 1.21 is end of life.'
+    cve: 'MediaWiki 1.21 is end of life. http://lists.wikimedia.org/pipermail/mediawiki-announce/2014-June/000153.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.20:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.22.7'
+    secure_version: '1.23.1'
     regexp: ['\$wgVersion.*?(?P<version>1\.20\.[0-9.]{1,})']
     cve: 'MediaWiki 1.20.x is end of life.'
     fingerprint: detect_general
@@ -89,15 +98,15 @@ MediaWiki 1.20:
 MediaWiki 1.19:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.19.16'
+    secure_version: '1.19.17'
     regexp: ['\$wgVersion.*?(?P<version>1\.19\.[0-9.]{1,})']
-    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-3966 http://lists.wikimedia.org/pipermail/mediawiki-announce/2014-May/000151.html http://osvdb.org/107528'
+    cve: 'http://lists.wikimedia.org/pipermail/mediawiki-announce/2014-June/000154.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.18:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.22.7'
+    secure_version: '1.23.1'
     regexp: ['\$wgVersion.*?(?P<version>1\.1[0-8]\.[0-9.]{1,})']
     cve: 'MediaWiki 1.18.x is end of life.'
     fingerprint: detect_general
