--- a/yamls/drupal.yml
+++ b/yamls/drupal.yml
@@ -1,3 +1,5 @@
+# URL: https://www.drupal.org/
+# NOTE: http://openconcept.ca/drupal-security-guide
 # N/A                                   CVE-2012-2922   7.15    http://osvdb.org/81817
 # https://drupal.org/SA-CORE-2012-001   CVE-2012-0825   7.11/6.23
 # https://drupal.org/SA-CORE-2012-001   CVE-2012-0826   7.11/6.23
@@ -17,20 +19,20 @@
 # https://drupal.org/SA-CORE-2014-001   CVE-2014-1475   7.26/6.30   http://osvdb.org/102124
 # https://drupal.org/SA-CORE-2014-001   CVE-2014-1476   7.26/6.30   http://osvdb.org/102125
 # https://drupal.org/SA-CORE-2014-002   CVE-2014-2983   7.27/6.31   http://osvdb.org/106004
-# https://drupal.org/SA-CORE-2014-003
+# https://drupal.org/SA-CORE-2014-003   CVE-2014-5019/CVE-2014-5020/CVE-2014-5021/CVE-2014-5022 7.29/6.32 http://osvdb.org/109237 http://osvdb.org/109236 http://osvdb.org/109238 http://osvdb.org/109284
 Drupal 7:
   1:
     location: ['/includes/bootstrap.inc']
-    secure_version: '7.27'
+    secure_version: '7.29'
     regexp: ['define.*?VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'CVE-2014-2983 http://osvdb.org/106004 https://drupal.org/SA-CORE-2014-002'
+    cve: 'https://drupal.org/SA-CORE-2014-003 CVE-2014-5019, CVE-2014-5020, CVE-2014-5021, CVE-2014-5022'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Drupal 6:
   1:
     location: ['/CHANGELOG.txt']
-    secure_version: '6.31'
+    secure_version: '6.32'
     regexp: ['^Drupal (?P<version>[0-9.]+)']
-    cve: 'CVE-2014-2983 http://osvdb.org/106004 https://drupal.org/SA-CORE-2014-002'
+    cve: 'https://drupal.org/SA-CORE-2014-003 CVE-2014-5019, CVE-2014-5020, CVE-2014-5021, CVE-2014-5022'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
