--- a/yamls/smf.yml
+++ b/yamls/smf.yml
@@ -46,6 +46,7 @@
 # CVE-2013-7234 2.0.6/1.1.19 http://osvdb.org/101004 http://www.jakoblell.com/blog/2013/12/13/multiple-vulnerabilities-in-smf-forum-software/ http://www.simplemachines.org/community/index.php?topic=512964.0
 # CVE-2013-7235 2.0.6/1.1.19 http://osvdb.org/101005 http://www.jakoblell.com/blog/2013/12/13/multiple-vulnerabilities-in-smf-forum-software/ http://www.simplemachines.org/community/index.php?topic=512964.0
 # CVE-2013-7236 2.0.6/1.1.19 http://www.jakoblell.com/blog/2013/12/13/multiple-vulnerabilities-in-smf-forum-software/ http://www.simplemachines.org/community/index.php?topic=512964.0
+# CVE-2013-4465 2.0.6
 # NFU:  http://osvdb.org/32605 too little information
 #       CVE-2007-5943 http://osvdb.org/39961 myth/fake
 #       CVE-2012-5903 http://osvdb.org/80766
@@ -54,23 +55,7 @@ SMF 2:
   1:
     location: ['/index.php']
     secure_version: '2.0.6'
-    regexp: ['\$forum_version.*?(?P<version>2[0-9.]{1,})']
-    cve: 'CVE-2013-7234, CVE-2013-7235, CVE-2013-7236 http://www.simplemachines.org/community/index.php?topic=512964.0'
-    fingerprint: detect_general
-    post_processing: ['php5.fcgi']
-SMF 1.1:
-  1:
-    location: ['/index.php']
-    secure_version: '1.1.19'
-    regexp: ['\$forum_version.*?(?P<version>1\.1[0-9.]{1,})']
-    cve: 'CVE-2013-7234, CVE-2013-7235, CVE-2013-7236 http://www.simplemachines.org/community/index.php?topic=512964.0'
-    fingerprint: detect_general
-    post_processing: ['php5.fcgi']
-SMF 1.0:
-  1:
-    location: ['/index.php']
-    secure_version: '1.1.18'
-    regexp: ['\$forum_version.*?(?P<version>1\.0[0-9.]{1,})']
-    cve: 'SMF 1.0.x versions are end of life. Please upgrade to 1.1.x or newer.'
+    regexp: ['\$forum_version.*?(?P<version>[0-9.]{1,})']
+    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2013-4465 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2013-7234 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2013-7235 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2013-7236 http://www.simplemachines.org/community/index.php?topic=512964.0'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
