--- a/yamls/mybb.yml
+++ b/yamls/mybb.yml
@@ -1,5 +1,4 @@
 # URL: http://www.mybb.com/downloads
-# Version: Upload/inc/class_core.php:   public $version = "1.6.10";
 # CVE-2010-4522         http://osvdb.org/69979 http://osvdb.org/69980
 # CVE-2010-4624         http://osvdb.org/70278 http://blog.mybb.com/2010/04/13/mybb-1-4-12-released-security-maintenance-update/
 # CVE-2010-4625         http://osvdb.org/70277 http://blog.mybb.com/2010/04/13/mybb-1-4-12-released-security-maintenance-update/
@@ -30,11 +29,14 @@
 # CVE-2013-7275 1.6.12  http://osvdb.org/101545
 # N/A           1.6.12  http://osvdb.org/101542
 # N/A           1.6.12  http://osvdb.org/101543
+# CVE-2014-1840
+# CVE-2014-XXXX 1.6.14 http://blog.mybb.com/2014/06/30/mybb-1-6-14-released-security-maintenance-release/
+# CVE-2014-5248 1.6.15 http://osvdb.org/109811 http://blog.mybb.com/2014/08/04/mybb-1-6-15-released-security-maintenance-release/
 MyBB:
   1:
       location: ['/inc/class_core.php']
-      secure_version: '1.6.12'
+      secure_version: '1.6.15'
       regexp: ['.*?public.*?\$version.*?(?P<version>[0-9.]+)']
-      cve: 'http://blog.mybb.com/2013/12/16/mybb-1-6-12-released-security-maintenance-release/ CVE-2013-7288 http://osvdb.org/101544 CVE-2013-7275 http://osvdb.org/101545 http://osvdb.org/101542 http://osvdb.org/101543'
+      cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-5248 http://osvdb.org/109811 http://blog.mybb.com/2014/08/04/mybb-1-6-15-released-security-maintenance-release/'
       fingerprint: detect_general
       post_processing: ['php5.fcgi']
