--- a/yamls/phpmyadmin.yml
+++ b/yamls/phpmyadmin.yml
@@ -74,17 +74,17 @@
 # PMASA-2014-1  CVE-2014-1879   4.1.7
 # PMASA-2014-2  CVE-2014-4348   4.2.4
 # PMASA-2014-3  CVE-2014-4349   4.2.4/4.1.14.1
-# PMASA-2014-4
-# PMASA-2014-5  CVE-2014-4955
-# PMASA-2014-6  CVE-2014-4986
-# PMASA-2014-7  CVE-2014-4987
-# PMASA-2014-8  CVE-2014-5273
-# PMASA-2014-9  CVE-2014-5274
+# PMASA-2014-4  CVE-2014-4954   4.2.6
+# PMASA-2014-5  CVE-2014-4955   4.2.6/4.1.14.2/4.0.10.1
+# PMASA-2014-6  CVE-2014-4986   4.2.6/4.1.14.2/4.0.10.1
+# PMASA-2014-7  CVE-2014-4987   4.2.6/4.1.14.2
+# PMASA-2014-8  CVE-2014-5273   4.2.7.1/4.1.14.3/4.0.10.2
+# PMASA-2014-9  CVE-2014-5274   4.2.7.1/4.1.14.3
 phpMyAdmin:
   1:
     location: ['/libraries/Config.class.php']
-    secure_version: '4.2.4'
+    secure_version: '4.2.7.1'
     regexp: ['.*?PMA_VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'CVE-2014-4349 http://www.phpmyadmin.net/home_page/security/PMASA-2014-3.php CVE-2014-4348 http://phpmyadmin.net/home_page/security/PMASA-2014-2.php'
+    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-5273 http://www.phpmyadmin.net/home_page/security/PMASA-2014-8.php http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-5274 http://www.phpmyadmin.net/home_page/security/PMASA-2014-9.php'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
