--- a/yamls/collabtive.yml
+++ b/yamls/collabtive.yml
@@ -6,8 +6,8 @@
 Collabtive:
   1:
     location: ['/changelog.txt']
-    secure_version: '1.2'
+    secure_version: '2.0'
     regexp: ['.*?Collabtive (?P<version>[0-9.]+)']
-    cve: 'CVE-2013-6872 http://osvdb.org/102123'
+    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-3247 http://osvdb.org/106765'
     fingerprint: detect_withoutnewlines
     post_processing: ['php5.fcgi']
