--- a/yamls/cmsms.yml
+++ b/yamls/cmsms.yml
@@ -22,11 +22,12 @@
 # CVE-2014-0334 TODO http://www.kb.cert.org/vuls/id/526062
 # CVE-2014-2092 TODO
 # CVE-2014-2245 1.11.10 http://osvdb.org/103854 http://dev.cmsmadesimple.org/project/changelog/4602 http://www.cmsmadesimple.org/2014/02/Announcing-CMSMS-1-11-10-Pinzon/
+# ?             1.11.11 http://www.cmsmadesimple.org/2014/08/Announcing-CMSMS-1-11-11-San-Cristobal/
 CMSMS:
   1:
     location: ['/version.php']
-    secure_version: '1.11.10'
+    secure_version: '1.11.11'
     regexp: ['\$CMS_VERSION.*?(?P<version>[.0-9]{2,})']
-    cve: 'CVE-2014-2245 http://www.cmsmadesimple.org/2014/02/Announcing-CMSMS-1-11-10-Pinzon/ http://osvdb.org/103854'
+    cve: 'http://www.cmsmadesimple.org/2014/08/Announcing-CMSMS-1-11-11-San-Cristobal/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
