--- a/yamls/phpmyadmin.yml
+++ b/yamls/phpmyadmin.yml
@@ -80,11 +80,12 @@
 # PMASA-2014-7  CVE-2014-4987   4.2.6/4.1.14.2
 # PMASA-2014-8  CVE-2014-5273   4.2.7.1/4.1.14.3/4.0.10.2
 # PMASA-2014-9  CVE-2014-5274   4.2.7.1/4.1.14.3
+# PMASA-2014-10 CVE-2014-6300   4.2.8.1/4.1.14.4/4.0.10.3
 phpMyAdmin:
   1:
     location: ['/libraries/Config.class.php']
-    secure_version: '4.2.7.1'
+    secure_version: '4.2.8.1'
     regexp: ['.*?PMA_VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-5273 http://www.phpmyadmin.net/home_page/security/PMASA-2014-8.php http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-5274 http://www.phpmyadmin.net/home_page/security/PMASA-2014-9.php'
+    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-6300 http://www.phpmyadmin.net/home_page/security/PMASA-2014-10.php'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
